updated pictures and bib

--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -111,7 +111,7 @@
     </progress>
   {% endif %}
   {% if site.banner %}
-        <img src="{{site.banner}}" class="banner" alt="Banner Image">
+        <img src="/{{site.banner}}" class="banner" alt="Banner Image">
   {% endif %}
   <style>
     .banner {
