--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -3,6 +3,15 @@
 <div class="row">
   {% if site.enable_publication_thumbnails %}
     <div class="col-sm-2 {% if entry.preview %}preview{% else %}abbr{% endif %}">
+    <div class="col-sm-2 {% if entry.preview %}preview{% else %}
+        {% if entry.abbr is iterable %}
+            {% for abbr in entry.abbr %}
+                {{ abbr }}<br>
+            {% endfor %}
+        {% else %}
+            {{ entry.abbr }}
+        {% endif %}
+      {% endif %}">
       {% if entry.preview %}
         {% if entry.preview contains '://' %}
           <img class="preview z-depth-1 rounded" src="{{ entry.preview }}">
