--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -111,7 +111,9 @@
     </progress>
   {% endif %}
   {% if site.banner %}
+    <div class="post">
         <img src="/{{site.banner}}" class="banner" alt="Banner Image">
+    </div>
   {% endif %}
   <style>
     .banner {
