--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -4,7 +4,7 @@
     <div class="container">
       {% if site.banner %}
         <div class="post">
-            <img src="/{{site.banner}}" class="banner" alt="Banner Image">
+            <img src="/{{site.banner}}" class="banner" alt="Banner Image" style="width: 100%; height: auto;">
         </div>
       {% endif %}
       {% if site.enable_navbar_social %}
