separate header container

--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -7,6 +7,8 @@
             <img src="/{{site.banner}}" class="banner" alt="Banner Image" style="width: 100%; height: auto;">
         </div>
       {% endif %}
+    </div>
+    <div class="container">
       {% if site.enable_navbar_social %}
         <!-- Social Icons -->
         <div class="navbar-brand social">{% include social.liquid %}</div>
