--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -2,7 +2,7 @@
   <!-- Nav Bar -->
   <nav id="navbar" class="navbar navbar-light navbar-expand-sm {% if site.navbar_fixed %}fixed-top{% else %}sticky-top{% endif %}" role="navigation">
     {% if site.banner %}
-      <div class="post">
+      <div class="container">
           <img src="/{{site.banner}}" class="banner" alt="Banner Image" style="width: 100%; height: auto;">
       </div>
     {% endif %}
