--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -4,8 +4,8 @@
       <div class="container">
         <div style="position: relative;">
             <img src="/{{site.banner}}" class="banner" alt="Banner Image" style="width: 100%; height: auto;">
-            <p style="position: absolute; top: 60%; left: 54%; color: white; white-space: no-wrap; font-weight: bold; font-size: 200%;">{{site.banner_title_right}}</p>
-            <p style="position: absolute; top: 0%; left: 1.5%; color: white; white-space: no-wrap; font-weight: bold; font-size: 200%;">{{site.banner_title_left}}</p>
+            <p style="position: absolute; top: 60%; left: 54%; color: white; white-space: no-wrap; font-weight: bold; font-size: 200%; text-shadow: 2px 2px 4px rgba(0, 0, 0, 1);">{{site.banner_title_right}}</p>
+            <p style="position: absolute; top: 0%; left: 1.5%; color: white; white-space: no-wrap; font-weight: bold; font-size: 200%; text-shadow: 2px 2px 4px rgba(0, 0, 0, 1);">{{site.banner_title_left}}</p>
         </div>
       </div>
   {% endif %}
