--- a/_includes/footer.liquid
+++ b/_includes/footer.liquid
@@ -15,11 +15,14 @@
   </footer>
 {% else %}
   <footer class="sticky-bottom mt-5" role="contentinfo">
-    <div class="container">
-      &copy; Copyright {{ site.time | date: '%Y' }}
-      {{ site.first_name }}
-      {{ site.middle_name }}
-      {{ site.last_name }}. {{ site.footer_text }}
+    <div class="container" style="display: flex; justify-content: space-between; align-items: center;">
+      <div style="min-width: 30%">
+        &copy; Copyright {{ site.time | date: '%Y' }}
+            {{ site.first_name }}
+            {{ site.middle_name }}
+            {{ site.last_name }}.
+        </div>
+      {{ site.footer_text }}
       {% if site.impressum_path %}
         <a href="{{ site.url }}{{ site.baseurl }}{{ site.impressum_path }}">Impressum</a>.
       {% endif %}
