onload of header text

--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -130,6 +130,8 @@ function resizeFont() {
 }
 
 // Call resizeFont on page load
-resizeFont();
+window.onload=function() {
+    resizeFont();
+}
 </script>
 </header>
