--- a/_includes/header.liquid
+++ b/_includes/header.liquid
@@ -3,8 +3,8 @@
   {% if site.banner %}
       <div class="container" style="position: relative; width: fit-content; padding: 0;">
             <img src="/{{site.banner}}" class="banner" alt="Banner Image" style="width: 100%; height: auto;">
-            <p class="banner-text" style="font-size: 5vw; margin: 0; line-height: 0.9; position: absolute; top: 29%; left: 95%; color: white; white-space: no-wrap; font-weight: bold;">{{site.banner_title_right}}</p>
-            <p class="banner-text" style="font-size: 5vw; margin: 0; line-height: 0.9; position: absolute; bottom: 5%; left: 1.2%; color: white; white-space: no-wrap; font-weight: bold;">{{site.banner_title_left}}</p>
+            <p class="banner-text" style="font-size: 50px; margin: 0; line-height: 0.9; position: absolute; top: 29%; left: 95%; color: white; white-space: no-wrap; font-weight: bold;">{{site.banner_title_right}}</p>
+            <p class="banner-text" style="font-size: 50px; margin: 0; line-height: 0.9; position: absolute; bottom: 5%; left: 1.2%; color: white; white-space: no-wrap; font-weight: bold;">{{site.banner_title_left}}</p>
       </div>
   {% endif %}
   <nav id="navbar" class="navbar container navbar-light navbar-expand-sm {% if site.navbar_fixed %}fixed-top{% else %}sticky-top{% endif %}" role="navigation">
